[gd_scene load_steps=17 format=2]

[ext_resource path="res://LevelTimeRemainUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Level.gd" type="Script" id=2]
[ext_resource path="res://UI/PlayerUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/tile_set.png" type="Texture" id=4]
[ext_resource path="res://Assets/door.png" type="Texture" id=5]
[ext_resource path="res://Sound/SFX Assets/SFX/clear all enemies Robot-game SFX.wav" type="AudioStream" id=6]
[ext_resource path="res://Sound/SFX Assets/SFX/Next level Robot-game SFX.wav" type="AudioStream" id=7]
[ext_resource path="res://Sound/SFX Assets/SFX/Timer Easy Robot-game SFX.wav" type="AudioStream" id=8]
[ext_resource path="res://Sound/SFX Assets/SFX/Timer Middle Robot-game SFX.wav" type="AudioStream" id=9]
[ext_resource path="res://Sound/SFX Assets/SFX/Timer Hard Robot-game SFX.wav" type="AudioStream" id=10]
[ext_resource path="res://Sound/SFX Assets/SFX/TimeOut Robot-game SFX.wav" type="AudioStream" id=11]
[ext_resource path="res://Sound/Music Assets/Music_Levels_16.0.00b_140bpm STEREO.wav" type="AudioStream" id=12]

[sub_resource type="TileSet" id=1]
0/name = "tile_set.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 16, 0, 160, 112 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 1 ), 4, Vector2( 0, 2 ), 4, Vector2( 0, 3 ), 16, Vector2( 0, 4 ), 32, Vector2( 0, 5 ), 4, Vector2( 0, 6 ), 4, Vector2( 1, 1 ), 4, Vector2( 1, 6 ), 2, Vector2( 2, 3 ), 16, Vector2( 3, 3 ), 16 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "tile_set.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 128, 0, 48, 112 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 1, 0 ), 8, Vector2( 1, 1 ), 1, Vector2( 1, 2 ), 1, Vector2( 1, 6 ), 8, Vector2( 2, 2 ), 1 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3, 8 )

[sub_resource type="CircleShape2D" id=4]

[node name="Level" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="BackGround Color" type="ColorRect" parent="."]
margin_left = -36.0
margin_top = -32.0
margin_right = 284.0
margin_bottom = 208.0
color = Color( 0.2, 0.196078, 0.227451, 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0 )

[node name="Over" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Walls" type="CollisionPolygon2D" parent="."]

[node name="YSort" type="YSort" parent="."]

[node name="Exit" type="StaticBody2D" parent="."]

[node name="Door" type="Sprite" parent="Exit"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
visible = false
position = Vector2( -5, 0 )
shape = SubResource( 3 )

[node name="ChangeLevel" type="Area2D" parent="Exit"]

[node name="Collider" type="CollisionShape2D" parent="Exit/ChangeLevel"]
position = Vector2( 10, -1 )
shape = SubResource( 4 )

[node name="Fade" type="ColorRect" parent="."]
visible = false
margin_left = -56.0
margin_top = -48.0
margin_right = 304.0
margin_bottom = 224.0
color = Color( 0, 0, 0, 1 )

[node name="Fadeduration" type="Timer" parent="."]

[node name="TimeUI" parent="." instance=ExtResource( 1 )]
margin_left = 168.0
margin_top = 22.0
margin_right = 168.0
margin_bottom = 22.0

[node name="PlayerUI" parent="." instance=ExtResource( 3 )]

[node name="AllDiedSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 6.118

[node name="NextLevelSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="TimerEasy" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="TimerMiddle" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="TimerHard" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="TimerOut" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -8.739
autoplay = true

[node name="Camera" type="Camera2D" parent="."]

[connection signal="body_entered" from="Exit/ChangeLevel" to="." method="_on_ChangeLevel_body_entered"]
[connection signal="timeout" from="Fadeduration" to="." method="_on_TimeRemain_timeout"]
[connection signal="timeout" from="TimeUI/Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="AllDiedSFX" to="." method="_on_AllDiedSFX_finished"]
[connection signal="finished" from="NextLevelSFX" to="." method="_on_NextLevelSFX_finished"]

[editable path="TimeUI"]
